packages/kyvernoPolicies/chart/tests/vpol/disallow-nodeport-services-cel/kyverno-test/resource.yaml
###### Services - Bad
---
apiVersion: v1
kind: Service
metadata:
  name: bad-nodeport
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bad-nodeport-explicit
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - port: 80
    nodePort: 30080
---
###### Services - Good
apiVersion: v1
kind: Service
metadata:
  name: good-clusterip
spec:
  selector:
    app: test
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: good-clusterip-explicit
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: good-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: good-externalname
spec:
  type: ExternalName
  externalName: example.com
