packages/kyvernoPolicies/chart/tests/vpol/disallow-nodeport-services-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-nodeport-services-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Service
  policy: disallow-nodeport-services-cel
  resources:
  - bad-nodeport
  - bad-nodeport-explicit
  result: fail
- isValidatingPolicy: true
  kind: Service
  policy: disallow-nodeport-services-cel
  resources:
  - good-clusterip
  - good-clusterip-explicit
  - good-loadbalancer
  - good-externalname
  result: pass
